@@ -98,6 +98,15 @@ struct rmw_target
   bool is_duplicate;
 };
 
+/**
+ * WIP:
+ *
+struct messages
+{
+  char close[81];
+};
+*/
+
 enum
 {
   CPY, CAT
