@@ -1,5 +1,10 @@
 === rmw ChangeLog ===
 
+2016-09-08
+
+	Added a function: close_file(), so I don't have to worry about
+	changing the way error messages are displayed.
+
 2016-09-04
 
 	* Issuing another release, due to issue #24
